--- a/ServiceFabricApp/AlarmService/App.config
+++ b/ServiceFabricApp/AlarmService/App.config
@@ -4,6 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
     </startup>
   <runtime>
+    <gcServer enabled="true" />
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Fabric" publicKeyToken="31bf3856ad364e35" culture="neutral" />
